# Digital-Intelligence

./: README.md  task.md
api/: Makefile  openapi.yaml
api/clients/: README.md
deploy/helm/di-collector/: Chart.yaml  values.yaml
deploy/helm/di-collector/templates/: deployment.yaml  secret.yaml  service.yaml
deploy/helm/riskos-adapter/: Chart.yaml  values.yaml
deploy/spark/: backfill-cron.yaml  stream-consumer.yaml
di-collector/: .dockerignore  Dockerfile  go.mod
di-collector/cmd/server/: main.go
di-collector/internal/api/: health.go  middleware.go  router.go  signals.go
di-collector/internal/auth/: bearer.go  context.go
di-collector/internal/metrics/: metrics.go
di-collector/internal/ratelimit/: tenant.go  tenant_test.go
di-collector/internal/redisx/: client.go
di-collector/internal/signal/: types.go  types_test.go
di-collector/internal/tracing/: tracing.go
di-collector/testdata/: sample_signal.json
docs/: runbook.md  schema-evolution.md
e2e/: docker-compose.yaml  run.sh  signal_factory.py
loadtest/: ingest.js
pyspark/: pyproject.toml  requirements.txt
pyspark/di_features/: __init__.py  backfill.py  feature_store.py  features.py  schema.py  sessionize.py  stream_consumer.py
pyspark/tests/: conftest.py  test_features.py  test_schema.py  test_stream_consumer.py
riskos-adapter/: Dockerfile  go.mod
riskos-adapter/cmd/adapter/: main.go
riskos-adapter/internal/adapter/: adapter.go  adapter_test.go
riskos-adapter/internal/bus/: bus.go
riskos-adapter/internal/store/: store.go
(+1 files in other folders)
