[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "di-features"
version = "0.1.0"
description = "DI signal feature engineering (PySpark)"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5,<4",
    "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "chispa>=0.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
